Update to SpringBoot 3.1.5